--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <ul class="flex flex-row font-raleway uppercase font-bold text-white tracking-widest">
           <li class="px-6 "><a href="/" class="decoration-none hover:text-btnGreen">HOME</a></li>
           <li class="px-6"> <a href="pricing.html" class="decoration-none hover:text-btnGreen">PRICING</a></li>
+          <li class="px-6"> <a href="gallery.html" class="decoration-none hover:text-btnGreen text-btnGreen">GALLERY</a></li>
         </ul>
       </div>
     </header>
