--- a/gallery.html
+++ b/gallery.html
@@ -240,9 +240,7 @@
               >
             </li>
             <li class="px-6">
-              <a
-                href="gallery.html"
-                class="decoration-none hover:text-btnGreen text-btnGreen"
+              <a href="gallery.html" class="decoration-none hover:text-btnGreen"
                 >GALLERY</a
               >
             </li>
@@ -399,7 +397,7 @@
                 alt="Purple Haze Macro Shot"
               />
               <div class="image-info">
-                <h3>Orange Butterscotc Hash Shot</h3>
+                <h3>Orange Butterscotch Hash Shot</h3>
                 <p>RVRS</p>
               </div>
             </div>
