--- a/gallery.html
+++ b/gallery.html
@@ -234,11 +234,11 @@
             <li class="px-6">
               <a href="/" class="decoration-none hover:text-btnGreen">HOME</a>
             </li>
-            <li class="px-6">
+            <!-- <li class="px-6">
               <a href="pricing.html" class="decoration-none hover:text-btnGreen"
                 >PRICING</a
               >
-            </li>
+            </li> -->
             <li class="px-6">
               <a href="gallery.html" class="decoration-none hover:text-btnGreen"
                 >GALLERY</a
@@ -617,7 +617,7 @@
           class="justify-center mt-8 absolute bottom-0 w-full mx-auto py-2 bg-black bg-opacity-50 text-sm text-center"
         >
           <p class="text-white">
-            Copyright © 2024 TerpFocus. All rights reserved.
+            Copyright © 2025 TerpFocus. All rights reserved.
           </p>
         </div>
       </footer>
